--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
-   
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+    
   },
-  "postinstall": "ng build --aot -prod",
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
