--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ami-taller-routing",
+  "name": "signtionary",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,10 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build — prod"
     
   },
-  "postinstall": "ng build --aot -prod",
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
