--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build — prod"
+    "e2e": "ng e2e"
     
   },
-  
+  "postinstall": "ng build — prod",
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
